fixed issue where background images in collection heros were not showing

--- a/resources/assets/sass/collection.scss
+++ b/resources/assets/sass/collection.scss
@@ -1,20 +1,10 @@
-.header-image-home {
-	   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-home-bg.jpg);
-	   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-home-bg.jpg);
-	   background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-home-bg.jpg);
+@each $desc in home, office, accessories {
+	.header-image-#{$desc} {
+	   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(/img/collection-#{$desc}-bg.jpg);
+	   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(/img/collection-#{$desc}-bg.jpg);
+	   background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(/img/collection-#{$desc}-bg.jpg);		
 	}
-
-.header-image-office {
-	   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-office-bg.jpg);
-	   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-office-bg.jpg);
-	   background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-office-bg.jpg);
-	}
-
-.header-image-accessories {
-	   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-accessories-bg.jpg);
-	   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-accessories-bg.jpg);
-	   background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)),url(http://bluegallery.dev/img/collection-accessories-bg.jpg);
-	}
+}
 
 .is-grey{
 	background-color: #888;
